# native-app

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/android/nativeapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native-app/: native-lib.cpp  native-lib.h
app/src/main/cpp/native-app/callback/: ObserverChain.cpp  ObserverChain.h
app/src/main/cpp/native-app/log/: Log.cpp  Log.h
app/src/main/cpp/native-app/manager/: NativeManager.cpp  NativeManager.h
app/src/main/cpp/native-app/prime/: PrimeNumber.cpp  PrimeNumber.h
app/src/main/cpp/native-app/timer/: Later.cpp  Later.h
app/src/main/cpp/native-app/utils/: Utils.h
app/src/main/java/com/example/android/nativeapp/: CallBackContainer.java  Log.java  MainActivity.java  MySparseArray.java  NativeManager.java  ProvaCallBack.java  ProvaSparseArray.kt  TestSize.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/android/nativeapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
